data/all_generated_tests/raw_wast_tests/nop_TypeMismatchinControlFlowInstructions_698.wast
;; 9. **Nop in Try-Catch with Type Mismatch**:    - Implement a `try-catch` block where the try section involves a `nop` and invalid type change, while catch expects another type.    - Checks proper type handling across exceptional control flows with `nop`.    - **Reasoning**: Verifies type correctness in exception handling paths.

(assert_invalid
 (module
  (func $type-try-catch
   (result i32)
   (try 
    (result i32)
    (nop)
    (i32.const 0)
   )
   (catch
    (i32.const 1)
   )
  )
 )
 "type mismatch"
)